--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: customFonts;
+    src: url(./fonts/Norse-Bold.otf);
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -17,6 +22,39 @@ body {
     background-image: url(https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80);
     background-position: center center;
     background-size: 100% 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: center;
+}
+
+.logo-section {
+    background-color: rgba(0,0,0,0.5);
+    width: 100%;
+    color: white;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20vh;
+    font-family: customFonts;
+    font-size: 88px;
+    padding-top: 5px;
+    
+}
+
+.logo-section img {
+    height: 125px;
+}
+
+.photo-credit {
+    display: block;
+    font-size: 0.9em;
+    color: white;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+
+    
 }
 
 .form-section {
