--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,14 @@
     src: url(./fonts/Norse-Bold.otf);
 }
 
+:root {
+    --left-space: 48px;
+}
+
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -26,6 +34,8 @@ body {
     flex-wrap: wrap;
     align-items: center;
     align-content: center;
+    text-align: center;
+    justify-content: space-between;
 }
 
 .logo-section {
@@ -38,6 +48,7 @@ body {
     font-family: customFonts;
     font-size: 88px;
     padding-top: 5px;
+    align-items: center; /* to align both the logo and the text */
     
 }
 
@@ -46,18 +57,18 @@ body {
 }
 
 .photo-credit {
-    display: block;
+    display: flex;
+    position: absolute;
     font-size: 0.9em;
     color: white;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-
-    
+    justify-content: center;
+    align-items: center;
+    bottom: 0;
+    padding-bottom: 10px;
 }
 
 .form-section {
     flex: 5;
+    background-color: #f9fafb;
 }
 
