--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,9 @@ body {
     align-items: center;
     bottom: 0;
     padding-bottom: 10px;
+    text-align: center;
+    margin: auto;
+    width: 40%;
 }
 
 .form-section {
