--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,10 @@ body {
     min-height: 100vh;
 }
 
+div {
+    display: block;
+}
+
 
 .background-section {
     flex: 3;
@@ -73,5 +77,45 @@ body {
 .form-section {
     flex: 5;
     background-color: #f9fafb;
+    display: flex;
+    flex-direction: column;
 }
 
+.form-section > p {
+    margin-bottom: 10px;
+    font-size: 1.4rem;
+    padding-left: 10px;
+    max-width: 80%;
+    font-weight: bold;
+}
+
+form {
+    display: block;
+    margin-top: 0em;
+}
+
+.inputs-section {
+    color: black;
+    background-color: white;
+    margin-top: 32px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    box-shadow: 0 5px 5px 4px rgb(0 0 0 / 10%);
+    padding-left: var(--left-space);
+}
+
+.inputs > div {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 84px;
+    row-gap: 18px;
+    margin-bottom: 18px;
+    
+}
+
+.inputs label {
+    display: block;
+    font-size: 0.7rem;
+    letter-spacing: 0.1rem;
+    margin-bottom: 1px;
+}
