--- a/styles.css
+++ b/styles.css
@@ -119,3 +119,21 @@ form {
     letter-spacing: 0.1rem;
     margin-bottom: 1px;
 }
+
+.inputs-section input {
+    border: 1px solid grey;
+    border-radius: 2px;
+    padding: 4px 8px;
+    width: 100%;
+    font-size: 1rem;
+    margin-right: 32px;
+}
+
+input.focus {
+    border: 1px solid blue;
+}
+
+.inputs > :first-child {
+    font-size: 20px;
+    margin-top: 5px;
+}
